# tensorsocket

./: README.md  imagenet_producer.py  pyproject.toml  pytorch_producer.py  s3dataset.py  s3dataset_batches.py  setup.py  simple_consumer.py  simple_consumer2.py  simple_producer.py  tensorsocket_sampler.py  test_consumer.py  test_consumer_org.py  test_producer.py  test_producer_org.py  test_worker.py  timm_producer.py
src/: producer.py  worker.py
tensor_share/: __init__.py  producer.py  worker.py
tensorshare/: consumer.py  payload.py  producer.py
tensorsocket/: __init__.py  consumer.py  heartbeat.py  payload.py  producer copy.py  producer.py
zmq_utils/: heartbeat.py
